dataset-service/2-dataset-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataset-service-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataset-service-backend
  template:
    metadata:
      labels:
        app: dataset-service-backend
    spec:
      serviceAccountName: dataset-service-backend
      volumes:
      - name: dataset-service-data-volume
        persistentVolumeClaim:
          claimName: dataset-service-data
      - name: datalake-volume
        persistentVolumeClaim:
          claimName: datalake-data
      - name: datasets-volume
        persistentVolumeClaim:
          claimName: datasets-data
      - name: datalake-orthanc
        persistentVolumeClaim:
          claimName: orthanc-storage
      containers:
      - name: dataset-service-backend
        image: harbor.eucaim-node.i3m.upv.es/core-services/dataset-service-backend:3.23.3-pr3
        ports:
        - containerPort: 11000
          name: dssport
        volumeMounts:
        - mountPath: /var/log/dataset-service
          subPath: log
          name: dataset-service-data-volume
        - mountPath: /var/on-event-jobs
          subPath: on-event-jobs
          name: dataset-service-data-volume
        - mountPath: /var/www/dataset-service-ui
          subPath: ui
          name: dataset-service-data-volume
        - mountPath: /var/www/project-logos
          subPath: project-logos
          name: dataset-service-data-volume
        - mountPath: /var/www/output-files
          subPath: output-files
          name: dataset-service-data-volume
        - mountPath: /var/www/datalakeinfo
          subPath: datalakeinfo
          name: dataset-service-data-volume
        - mountPath: /mnt/datalake
          name: datalake-volume
          subPath: storage_link
        - mountPath: /mnt/datasets
          name: datasets-volume
        - mountPath: /var/lib/orthanc
          name: datalake-orthanc
        resources:
          requests:
            memory: 320Mi
            cpu: 300m
      priorityClassName: core-services
      nodeSelector:
        chaimeleon.eu/target: core-services
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: dataset-service-backend-service
spec:
  selector:
    app: dataset-service-backend
  ports:
  - port: 11000
    protocol: TCP
    targetPort: dssport
