dataset-service/4-ingress-for-redirect-from-root-path.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: root-path-redirect
  annotations:
#   kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://eucaim-node.i3m.upv.es/dataset-service
spec:
  ingressClassName: nginx
  rules:
    - host: eucaim-node.i3m.upv.es
      http:
        paths:
          - path: /$
            pathType: ImplementationSpecific
            backend:
              service:
                name: dataset-service-backend-service
                port:
                  number: 11000
