dataset-service/ingress-for-redirect-from-root-path.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: dataset-service-backend-proxy
  namespace: dataset-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://chaimeleon-eu.i3m.upv.es/dataset-service
spec:
  rules:
    - host: chaimeleon-eu.i3m.upv.es
      http:
        paths:
          - path: /?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dataset-service-backend-service
                port:
                  number: 11000
